# Inbox-Pilot

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  release-please-config.json  render.yaml
.github/workflows/: ci.yml  release-please.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: analyze.py  ops.py  routes.py
backend/src/app/core/: __init__.py  config.py  language.py  nlp.py  redaction.py  security.py  text.py
backend/src/app/domain/: __init__.py  analysis.py  ingestion.py
backend/src/app/schemas/: __init__.py  analyze.py
backend/src/app/services/: __init__.py  analysis.py  fallback_analysis.py  ingestion.py  llm_analysis.py  openai_analysis.py
backend/tests/: conftest.py  test_ai_contract.py  test_analyze_contract.py  test_health.py  test_llm_analysis.py  test_nlp.py  test_openai_analysis.py  test_ops_health.py  test_redaction.py
backend/tests/fixtures/: sample_email.txt
docs/archive/: README.md
docs/local/: README.md  implementation-roadmap.md  initial-objective.md  launch-checklist.md  security-hardening-assessment.md  security-p0-plan.md  security-p1-plan.md  security-p2-plan.md  test-files.md
docs/projects/: ARCHITECTURE.md  CI-CD-RELEASES.md  DEPLOYMENT.md  INDEX.md  PRODUCT-OVERVIEW.md  TECHNICAL-REFERENCE.md  USER-FLOW.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
scripts/: frontend-dev.sh
smoke-artifacts/test-files/: operational-email-short.txt  oversize-email-upload.txt  prompt-injection-email.txt  (+4 more)
(+33 files in other folders)
